# loxide

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lex.rs  lib.rs  main.rs  parse.rs  span.rs  token.rs  token_cursor.rs
src/lexer/: cursor.rs  mod.rs
src/parse/: errors.rs  literal.rs  mod.rs  op.rs  stmt.rs  token_cursor.rs
src/snapshots/: loxide__lex__tests__parse__identifiers.snap  loxide__lex__tests__parse__keywords.snap  loxide__lex__tests__parse__numbers.snap  loxide__lex__tests__parse__punctuators.snap  loxide__lex__tests__parse__strings.snap  loxide__lex__tests__parse__whitespace.snap  loxide__lexer__tests__identifiers.snap  loxide__lexer__tests__keywords.snap  loxide__lexer__tests__numbers.snap  loxide__lexer__tests__punctuators.snap  loxide__lexer__tests__strings.snap  loxide__lexer__tests__whitespace.snap
