[package]
name = "loxide"
version = "0.1.0"
edition = "2021"
authors = ["Amr Elghobary <git@amrr.xyz>"]

[dependencies]
thiserror = "2.0.8"
once_cell = "1.20.2"
clap = { version = "4.5.23", features = ["derive"] }
miette = { version = "7.4.0", features = ["fancy"] }

[dev-dependencies]
insta = { version = "1.41.1", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
